# specs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  agent-coding-benchmark.md  agent-economics.md  agent-flags.json  agent-osi-model.md  agent-registry.md  ai-gateway.md  ap2-mandate.md  asfs.md  attestation-protocol.md  auditor-verification.md  capability-manifest.md  clarification-protocol.md  compliance-as-code.md  coordination.md  delegation-framework.md  deployment-manifest.md  ecp.md  handoff.md  iacp-fault-tolerance.md  iacp-internet-draft.md  iacp.md  identity.md  index.md  llms-full.txt  llms.txt  local-first.md  mcp-ui-payload-schema.json  onboarding.md  reputation-ledger.md  security-disclosure-protocol.md  sla-framework.md  spec-template.md  transaction.md  trust-score.md
.github/ISSUE_TEMPLATE/: agent-friendly.md  new-spec.md  spec-change.md
.github/workflows/: script-of-the-week.yml
agent-coding-benchmark/v1.0.0/: curl.md  python.md  typescript.md
agent-economics/v1.0.0/: typescript.md
agent-economics/v1.1.0/: curl.md  python.md
agent-osi-model/v1.0.0/: curl.md  python.md  typescript.md
agent-registry/v1.0.0/: curl.md  python.md  typescript.md
ai-gateway/v1.0.0/: python.md
ai-gateway/v1.1.0/: curl.md  typescript.md
asfs/v1.0.0/: curl.md  (+1 more)
reference/: README.md
reference/mcp-server/: README.md  pyproject.toml  server.py
related/: a2a.md  aamp.md  autogen.md  crewai.md  dcp.md  gaia.md  helm.md  langgraph.md  mcp.md  mlperf.md  okf.md  openai-agents-sdk.md  pilot-protocol.md
scripts/: validate-metadata.py
(+104 files in other folders)
